# ParaCL_front

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp  test.cl
ast/: JSONToAst.cppm  ast.cppm  astToJSON.cppm
cmake/: projInfo.cmake  projInfo.hpp.cmake
front/: CMakeLists.txt  main.cpp
front/lexer/inc/: lexer.hpp
front/lexer/src/: lexer.l
front/parser/src/: ast.cppm  check_variables.cpp  check_variables.hpp  parse_error.cpp  parser.y
general/: compileOpts.cppm  general.cppm  logger.cppm
lexer/src/: lexer.l
parser/: check_variables.cpp  parse_error.cpp  parse_error.hpp  parser.y
src/: main.cpp
tests/: main2.cpp
tests/e2e/: 0002.cl  0003.cl
